<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.exam.movieviewer.module.MovieDetailsActivity">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:background="@color/bgPhoto"
        android:src="@drawable/ic_blank_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:layout_weight=".6"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/iv_cover"
                        android:layout_width="110dp"
                        android:layout_height="150dp"
                        android:background="@color/bgPhoto"
                        android:src="@drawable/ic_blank_image"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_name"
                        android:theme="@style/TvTitle"/>

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:theme="@style/TvContent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/title_genre"
                        android:theme="@style/TvTitle"/>

                    <TextView
                        android:id="@+id/tv_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:theme="@style/TvContent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/title_rating"
                        android:theme="@style/TvTitle"/>

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:theme="@style/TvContent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/title_duration"
                        android:theme="@style/TvTitle"/>

                    <TextView
                        android:id="@+id/tv_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:theme="@style/TvContent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/title_release_date"
                        android:theme="@style/TvTitle"/>

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:theme="@style/TvContent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/title_synopsis"
                        android:theme="@style/TvTitle"/>

                    <TextView
                        android:id="@+id/tv_synopsis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:theme="@style/TvContent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/title_cast"
                        android:theme="@style/TvTitle"/>

                    <TextView
                        android:id="@+id/tv_cast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:theme="@style/TvContent"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_red_dark"
        android:text="@string/action_seat_map"
        android:textColor="@android:color/white"/>
</LinearLayout>
